Added image to presentation

--- a/3YCM/3YCM.html
+++ b/3YCM/3YCM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>3YCM</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -29,13 +29,15 @@ class: center, middle
 
 # Agenda
 
-1. Introduction
-2. Deep-dive
+1. Gene-specific and Genome-wide sweeps in natural populations
+2. Tracking acI populations using SAGs and metagenomes
 3. ...
 
 ---
 
 # Introduction
+
+<img src="images/acI_tree.jpg" width="650px .top"/>
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
