updated link to image

--- a/3YCM/3YCM.html
+++ b/3YCM/3YCM.html
@@ -37,7 +37,7 @@ class: center, middle
 
 # Introduction
 
-<img src="images/acI_tree.jpg" width="650px .top"/>
+<img src="images/acI_tree.jpg" width="650px"/>
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
